tests/baselines/reference/assignmentCompatability23.errors.txt
tests/cases/compiler/assignmentCompatability23.ts(9,1): error TS2322: Type 'interfaceWithPublicAndOptional<number, string>' is not assignable to type '{ two: boolean[]; }'.
  Types of property 'two' are incompatible.
    Type 'string' is not assignable to type 'boolean[]'.


==== tests/cases/compiler/assignmentCompatability23.ts (1 errors) ====
    module __test1__ {
        export interface interfaceWithPublicAndOptional<T,U> { one: T; two?: U; };  var obj4: interfaceWithPublicAndOptional<number,string> = { one: 1 };;
        export var __val__obj4 = obj4;
    }
    module __test2__ {
        export var obj = {two: [true]};
        export var __val__obj = obj;
    }
    __test2__.__val__obj = __test1__.__val__obj4
    ~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type '{|interfaceWithPublicAndOptional|0|}<number, string>' is not assignable to type '{ {|two|1|}: boolean[]; }'.
!!! error TS2322:   Types of property 'two' are incompatible.
!!! error TS2322:     Type 'string' is not assignable to type 'boolean[]'.
!!! annotated symbol 0 tests/cases/compiler/assignmentCompatability23.ts:2:22
!!! annotated symbol 1 tests/cases/compiler/assignmentCompatability23.ts:6:23